<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Photo Click</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btnLogin">Login</string>
    <string name="pwd">Password</string>
    <string name="un">Username</string>
    <string name="uploadMsg">Please choose images to print</string>
    <string name="albumMsg">Please select one of your albums</string>
    <string name="albumList">Please select an album</string>
    <string name="photoMsg">Please choose images to print</string>
    <string name="select">Select</string>
    <!--<string name="app_id">232382423552157</string>-->
    <!--<string name="application_id">232382423552157</string>-->

    <!--My App-->
    <string name="app_id">236606583195071</string>
    <string name="application_id">236606583195071</string>

    <!--Mani App-->
    <!--<string name="app_id">349495461798323</string>-->
    <!--<string name="application_id">349495461798323</string>-->

    <string name="text_signin">Log In</string>
    <string name="text_signout">Log Out</string>


    <string-array name="menu_array">
        <item>Device Gallery</item>
        <item>Facebook</item>
        <item>Vk</item>
        <!--<item>Order History</item>-->
        <item>Cart</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="btnSelect">Select</string>
    <string name="cart">Cart</string>
    <string name="add_more">Add More</string>
    <string name="desc_list_item_icon">Icons</string>
    
	<string-array name="sizes">
	    <item>3.25 x 4.5</item>
	    <item>3.5 x 5</item>
	    <item>3.5 x 8.1</item>
	    <item>3.9 x 5.8</item>
	    <item>4.7 x 9.3</item>
	    <item>5.8 x 7.9</item>
	    <item>4 x 6</item>
	</string-array>
	
	<array name="menu_icons">
        <item>@drawable/ic_action_select_all</item>	<!-- My Gallery -->
        <item>@drawable/facebook_icon</item>		<!-- Facebook -->
        <item>@drawable/ic_action_user</item>		<!-- User -->
        <!--<item>@drawable/ic_action_new</item>		 Order History	 -->
        <item>@drawable/cart</item>					<!-- Cart -->
        <item>@drawable/ic_action_new</item>		<!-- Logout -->
    </array>
    
    <string name="invoice">Invoice: </string>
	<string name="date">Date: </string>
	<string name="imgQty">No of Images: </string>
	<string name="price">Price: </string>
	<string name="viewImg">View Images: </string>  
	<string name="imgDesc">Photo print Images</string>
	<string name="sizeHere">Sizes Here</string>
	
	<string name="one">1</string>
	<string name="size">Size: </string>
	<string name="piece">Piece/s</string>
	<string name="name">Name</string>
	<string name="username">Username</string>
	<string name="contact_num">Contact Number</string>
	
	<string name="email">Email</string>
	<string name="country">Country</string>
	<string name="state">State</string>
	<string name="city">City</string>
	<string name="myself">Myself</string>
	<string name="qty">Qty: </string>
	<string name="register">Register</string>
	<string name="deleteAll">Delete All</string>
	<string name="camera">Camera</string>
	<string name="fullName">Full Name</string>
	<string name="submit">Submit</string>
	
	<string name="size1">3.25 x 4.5</string>
	<string name="size2">3.5 x 8.1</string>
	<string name="size3">3.9 x 5.8</string>
	<string name="size4">4.7 x 9.3</string>
	<string name="size5">5.8 x 7.9</string>
	<string name="size6">4 x 6</string>
	
	<string name="price1">5</string>
	<string name="price2">10</string>
	<string name="price3">15</string>
	<string name="price4">20</string>
	<string name="price5">25</string>
	<string name="price6">30</string>
	
	<string name="priceTag">Price</string>

    <!-- About Us -->
    <string name="about_title">About Us</string>
    <string name="client_link">© My-Apps.kz </string>
    <string name="web_link">photoclick.kz</string>
    <string name="version_name">Version 1.0</string>
    <string name="about_text">Coming Soon</string>
    <string name="call_us">Call Us</string>
    <string name="or">Or</string>
    <string name="email_us">Email Us</string>
    <string name="developed_by">Developed By</string>
    <string name="mobile_no">+77479709704</string>
    <string name="btn_ok">Select</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">Select from Gallery</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btn_printforfree">Print for Free</string>
    <string name="btn_printandpay">Print and Pay</string>
    <string name="btn_senddetails">Send details</string>
    <string name="btn_senddetail">Send detail</string>
    <string name="btn_about_us">About Us</string>
    <string name="order_confirmation">Please check your inbox for\n confirmation email and confirm your order.</string>
    <string name="payment_method">Payment method</string>
    <string name="authorise_sn">Authorise in Social Networks</string>
    <string name="print_from_device">Print from Device</string>
    <string name="print_from_sn">Print from Social Network</string>
    <string name="check_out">Check out form</string>
    <string name="address_form">Address Form</string>
    <string name="region">Region</string>
    <string name="street">Street</string>
    <string name="house_no">House Number</string>
    <string name="apart_no">Apartment Number </string>
    <string name="delivery">Delivery </string>
    <string name="comment">Comment</string>
    <string name="app_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="albums">Albums</string>
    <string name="photos">Photos</string>
    <string name="device_gallery">Device Gallery</string>
    <string name="select_sn">Select Social Network</string>
    <string name="loading">Loading</string>
    <string name="later">OK.May be Later?</string>
    <string name="on_progress">On Progress…</string>
    <string name="fill_address_form">Please fill Address form</string>
    <string name="generating">Generating order</string>
    <string name="uploading_file">Please wait uploading file</string>
    <string name="confirm">Confirmation</string>
    <string name="confirm_msg">Confirmation Message</string>
    <string name="go_back">Go back to place another order</string>
    <string name="free_toast">Please select Min 5 &amp; Max 25 images</string>
    <string name="paid_toast">Not a single image selected</string>
    <string name="confirm_pwd">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="already_reg">Already Registered. Login Me!</string>
    <string name="ads">(No advertisements in the opposite side)</string>
    <string name="Vk">VKontakte</string>
    <string name="circle_title">Tutorial Activity</string>
    <string name="order_success">Order Placed Successfully</string>
    <string name="tut_skip">I\'m ready to print my Photos</string>
    <string name="reg_error">User with this email already exists</string>
    <string name="not_connected">Not connected to network</string>
    <string name="incorrect_user">Incorrect Username or Password</string>
    <string name="phone_number">Phone Number</string>


</resources>
